# pesquisa-webassembly

./: .gitignore  CMakeLists.txt  Cargo.toml  JS10x10.js  JS2x2.js  JS5x5.js  a.cjs  a.out.js  a.out.wasm  api.js  b.c  b.js  bb.js  bb.wasm  bb.wasm.map  bench.c  bench.js  bench.wasm  bench10x10.c  bench10x10.js  bench10x10.wasm  bench2x2.c  bench2x2.js  bench2x2.wasm  bench5x5.c  bench5x5.js  bench5x5.wasm  benchT.js  bu.js  comandos.txt  conan.py  conanfile.txt  emcc.bat  fat.js  fat.rs  fat_wasm.js  fatorial  fatorial.c  fatorial.cjs  fatorial.js  (+25 more)
C-base/: bench10x10.c  bench2x2.c  bench5x5.c  print.txt
bak-code/: comandos.txt  fat.js  fatwasm.js  index.html
bubblesort/: b.c  b.js  b100kb.js  bb.js  bb.wasm  bu.js  main.js  numeros1MB.txt  wasm100kb.js
